--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: fastpages
-description: An easy to use blogging platform with support for Jupyter Notebooks.
+title: Sean's Python Explorations
+description: Explorations of a mostly python nature...
 github_username: seansummers
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "python-explorations"
@@ -39,8 +39,8 @@ baseurl: "/python-explorations" # the subpath of your site, e.g. "/blog".
 # Github and twitter are optional:
 minima:
   social_links:
-    twitter: fastdotai
-    github: fastai
+    twitter: seansummers
+    github: seansummers
 
 # Set this to true to get LaTeX math equation support
 use_math: 
@@ -52,7 +52,7 @@ show_description: true
 show_image: false
 
 # Set this to true to turn on annotations with hypothes.is (https://web.hypothes.is/)
-annotations: false
+annotations: true
 
 # Set this to true to display tags on each post
 show_tags: true
